contrast fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,7 @@
   --color-primary: #ffffff;
   --color-secondary: #afafaf;
   --color-muted: #afafaf;
-  --color-footer: #222222;
+  --color-footer: #757575;
   --color-light: #343a40;
   --color-border: #495057;
   --color-white: #000000;
